static/styles/main.css
* {
  user-select: none;
  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  -o-user-select: none; /* Opera */
}

/* 원래있던거 */
canvas { 
  position: relative;
  display: block;
  border: none;
} 

.left-box {
    display: block;
    box-sizing: border-box;
    overflow: hidden;
    position: absolute; 
    /* background: transparent; */
    background-color: rgba(255, 255, 255, 0.85);
    border-radius: 20px;
    width: 150px; 
    height: 60px;
    top: 20px;
    left: 20px;
    z-index: 1;
    box-shadow: 0 8px 22px rgba(0, 0, 0, 0.15);
    transition: 1.3s cubic-bezier(0.53, 0, 0.15, 1.3);
}
.left-box.expanded {
    height: 300px;
}
.topName {
    font-family: Helvetica, sans-serif; 
    font-size: 15px;
    font-weight: bold;
    margin-left: 55px;
    margin-top: 20px;
}
.toggle {
    position: relative;
    height: 42.75px;
    width: 58.5px;
    cursor: pointer;
  }
.toggle:after, .toggle:before {
    content: "";
    background: black;
    width: 25px;
    height: 4.5px;
    margin: auto;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    transition: 1.3s cubic-bezier(0.53, 0, 0.15, 1.3);
  }
.toggle:before {
    top: -30%;
  }
.toggle:after {
    top: 30%;
  }
.toggle.close:before {
    transform: rotate(-225deg);
    top: 0;
  }
.toggle.close:after {
    transform: rotate(225deg);
    top: 0;
  }

.middleMenu {
    position: absolute;
    top: calc(100% - 52px);
    right: 120px;
    height: 30px;
    width: 30px;
    transition: 0.1s;
    font-family: Helvetica, sans-serif; 
    font-size: 18px; 
    font-weight: 200;
  }
  .middleMenu.close {
    bottom: 0;
}
span {
    position: relative;
    bottom: 150px;
    left: 20px;
    white-space: nowrap;
    visibility: visible;
    opacity: 1;
    transition: 0.3s;
    transform: rotateY(0deg);
  }
  
  span.hidden {
    width: 0;
    visibility: hidden;
    opacity: 0;
    transform: rotateY(90deg);
  }
  
  span.hidden:nth-of-type(6) {
    transition-delay: 0.5s;
  }
  span.hidden:nth-of-type(5) {
    transition-delay: 0.4s;
  }
  span.hidden:nth-of-type(4) {
    transition-delay: 0.3s;
  }
  span.hidden:nth-of-type(3) {
    transition-delay: 0.2s;
  }
  span.hidden:nth-of-type(2) {
    transition-delay: 0.1s;
  }
  span.hidden:nth-of-type(1) {
    transition-delay: 0s;
  }

.insta_logo {
    width: 10px;
}
.right-box {
    position: absolute;
    background: transparent;
    background-color: rgba(255, 255, 255, 0.85);
    border-radius: 20px;
    overflow: hidden;
    width: calc(100% - 210px);
    height: calc(100% - 50px);
    top: 20px;
    left: 190px;
    z-index: 1;
    visibility: hidden;
}
.page-transition {
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
}

.changecolor {transition: color 0.2s ease;}
#Menu span a {
    text-decoration: none;
    color: inherit;
}
#instaLink {
    text-decoration: none;
    color: inherit;
}
iframe {
  border: none; width: 100%; height: 100%;
}
body {
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}
.first_footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 30px;
  background-color: transparent;
  text-align: left;
  float: left;
  width: 150px;
  margin-left: 20px;
}
.second_footer { 
  position: fixed;
  bottom: 30px;
  left: 0;
  width: 150px;
  height: auto;
  overflow: visible;
  background-color: transparent;
  /* background-color: white; */
  text-align: left;
  float: left;
  margin-left: 20px;
}
/* audioplaybutton */
.button {
  width: 30px;
  height: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  border: 2px solid black;
  background: radial-gradient( rgba(255, 0, 128, 0.8) 60%, rgba(255, 255, 255, 1) 62%);
  border-radius: 50%;
  box-shadow: 0px 0px 25px 3px rgba(255, 0, 128, 0.8);
}
.button--play {
  border-radius: 50%;
}
.button--play .button__shape {
  width: 5px;
  height: 15px;
  background: black;
  transition: 0.3s ease-in-out;
}
.button--play .button__shape--one {
  -webkit-clip-path: polygon(0 0, 100% 25%, 100% 75%, 0% 100%);
  clip-path: polygon(0 0, 100% 25%, 100% 75%, 0% 100%);
  transform: translateX(1.5px);
}
.button--play .button__shape--two {
  -webkit-clip-path: polygon(0 25%, 100% 50%, 100% 50%, 0 75%);
  clip-path: polygon(0 25%, 100% 50%, 100% 50%, 0 75%);
  transform: translateX(1.4px);
}
.button--play.button--active .button__shape--one {
  -webkit-clip-path: polygon(0 15%, 50% 15%, 50% 85%, 0% 85%);
  clip-path: polygon(0 15%, 50% 15%, 50% 85%, 0% 85%);
  transform: translateX(0px);
}
.button--play.button--active .button__shape--two {
  -webkit-clip-path: polygon(50% 15%, 100% 15%, 100% 85%, 50% 85%);
  clip-path: polygon(50% 15%, 100% 15%, 100% 85%, 50% 85%);
  transform: translateX(0px);
}

/* audioplaybutton */
/* 말풍선 */
.box {
  padding: 20px;
}
.pull {
  position: fixed;
  padding: 20px; 
  width: 110px; 
  height: 60px;
  bottom: 100px;
  color: #FFF; 
  border-radius: 20px; 
  background-color: #000000;
  font-family: 'Courier New', Courier, monospace;
  font-size: 10px;
}
.pull:after {
  content:"";
  position: absolute; 
  top: 75px; 
  right: 100px; 
  border-left: 20px solid #000000; 
  border-top: 20px solid transparent; 
  border-bottom: 30px solid transparent;
}



@media screen and (max-width: 600px) {
    .left-box {
        position: fixed;
        /* background-color: transparent; */
        background-color: rgba(255, 255, 255, 0.85);
        width: calc(100% - 40px);
        height: 60px;
        z-index: 2;
    }
    .left-box.expanded {
        height: 120px;
    }
    .topName {
        margin-left: 20px;
    }
    .middleMenu {
        position: absolute;
        right: 40px;
        height: 30px;
        width: 30px;
        transition: 0.1s;
        font-family: Helvetica, sans-serif; 
        font-size: 18px; 
        font-weight: 200;
      }
      .middleMenu.close {
        bottom: 0;
      }
      .insta_logo {
        width: 15px;
      }
      @media (max-width: 480px) {
        .insta_logo {
          width: 12px;
        }
      }

      span {
        position: relative;
        bottom: 20px;
        white-space: nowrap;
        visibility: visible;
        opacity: 1;
        transition: 0.3s;
        transform: rotateY(0deg);
      }
      @media (max-width: 480px) {
        span:nth-of-type(6) {
          transform: translate(-43px, 32px);
        }
        span:nth-of-type(5) {
          transform: translate(-43px, 32px);
        }
        span:nth-of-type(4) {
          transform: translate(137px, 3px);
        }
        span:nth-of-type(3) {
          transform: translate(137px, 3px);
        }
        span:nth-of-type(2) {
          transform: translate(137px, 3px);
        }
        span:nth-of-type(1) {
          transform: translate(137px, 3px);
        }
      }

      span.hidden {
      width: 100%;
      visibility: hidden;
      opacity: 0;
      transform: rotateZ(90deg);
      }
      span.hidden:nth-of-type(1) {
      transition-delay: 0s;
      }
      span.hidden:nth-of-type(2) {
      transition-delay: 0s;
      }
      span.hidden:nth-of-type(3) {
      transition-delay: 0s;
      }
      span.hidden:nth-of-type(4) {
      transition-delay: 0s;
      }
      span.hidden:nth-of-type(5) {
      transition-delay: 0s;
      }
      span.hidden:nth-of-type(6) {
        transition-delay: 0s;
       }

    .first_footer {
        position: fixed;
        margin-top: 5px;
        width: 100%;
        height: 30px;
    } 
    .second_footer { 
      position: fixed;
      width: calc(100% - 40px);
      bottom: 15px;
      transform: scale(1.5);
      margin-left: calc(100% + 50px);
      z-index: 2;
    }
    @media (max-width: 480px) {
      .second_footer {
      margin-left: calc(100% + 10px);
      }
    }
    .pull {
      visibility: visible;
      opacity: 0.1;
      left: -190px;
      margin-left: calc(100% + 30px);
      bottom: 50px;
      transform: scale(0.8);
    }
    @media (max-width: 480px) {
      .pull {
      margin-left: calc(100% + 50px);
      }
    }
    .pull:after {
      visibility: hidden;
      transform: rotateY(180deg);
    }
    .pull:hover {
      visibility: visible;
      opacity: 1;
    }

    #Menu {
        display: flex;
        flex-direction: row;
        justify-content: right;
        padding-right: 20px;
    }
    
    #Menu span {
        margin: 0;
        padding-right: 10px;
        padding-left: 0;
    }
    
    .right-box {
        position: fixed;
        margin-top: 140px;
        left: 20px;
        Width: calc(100% - 40px);
        height: calc(100% - 190px);
        z-index: 1;
    }
    #instaLink {
        position: flexible;
        float: right;
        padding-right: 25px;
    }};

